@@ -475,6 +475,10 @@ C-API
 Library
 -------
 
+- Issue #1437051: For pdb, allow "continue" and related commands in
+  .pdbrc files.  Also, add a command-line option "-c" that runs a
+  command as if given in .pdbrc.
+
 - Issue #4179: In pdb, allow "list ." as a command to return to the
   currently debugged line.
 
